<resources>
    <string name="app_name">Multi Thread Downloader</string>
    <string name="main_title">Demo</string>
    <string name="multi_thread_downloader">多线程下载器</string>
    <string name="download_file_path">https://ihealthy.oss-cn-shenzhen.aliyuncs.com/apk/patient/%E5%8A%A8%E4%BC%98%E5%BA%B7%E5%A4%8D-%E6%82%A3%E8%80%85%E7%AB%AF-v2.8.5.apk</string>
    <string name="download">下载</string>
    <string name="download_progress">下载进度</string>
    <string name="stop">暂停</string>
    <string name="download_error">下载失败</string>
    <string name="sdcard_error">SD卡不存在</string>
</resources>
